- Added tool class to pause/unpause topography updates.
- Added water simulation control dialog to change water speed, number of
  simulation steps, and water velocity attenuation dynamically.
- Added links to tutorial videos to README.
- Adapted instructions in README to improved calibration procedure and
  added notes about new full-screen toggle key combination (Win+f).
- Added command pipe to override some configuration values from outside
  of running SARndbox process; pipe name passed by -cp <pipe name>
  command line option. Current commands:
  - waterSpeed <speed>
  - waterMaxSteps <max steps>
  - waterAttenuation <attenuation>
  - colorMap <color map name>

SARndbox-2.0:
- Bumped Vrui version requirement to Vrui-4.0-001.
- Bumped Kinect version requirement to Kinect-3.0.
- Complete restructuring of SARndbox modules.
- New rain maker based on hand detection.
- New DEM tool.
- Changed several command line parameters to have enable/disable
  versions, such as -nhm ("no height map") to disable height mapping,
  and -uhm ("use height map") to enable height mapping. See online help
  for the full list of parameters.
- Preliminary support for per-window rendering settings when multiple
  windows are used. -wi <window index> applies all following rendering-
  related settings to the window of the given index.
- Added overall scale factor to sandbox to simulate different terrain
  sizes; the previous fixed scale, which is now the default scale, was
  100.0 (1:100, 1cm in sandbox is 1m in virtual terrain).

SARndbox-2.1:
- Bumped Vrui version requirement to Vrui-4.1-001.
- Bumped Kinect version requirement to Kinect-3.1.
- Support for all 3D cameras supported by the Kinect-3.1 package.
- Support for multiple display windows with individual rendering
  settings.
- Improvements to DEM tool.

SARndbox-2.2:
- Bumped Vrui version requirement to Vrui-4.2-001.
- Bumped Kinect version requirement to Kinect-3.2.
- Added tool to save the current surface as a DEM file.